2006-05-24  Petr Ovtchenkov  <ptr@island.corbina.net>

	* args.cc:  explicitly add stdexcept header.

2005-03-25  Petr Ovtchenkov  <ptr@island.plnet.ru>

	* Makefile: revision of Makefiles---path to stlport lib and
	-lstlport went to common Makefiles.

2004-11-05  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* libmisc: library naming scheme changed.

2002-08-03  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* CyrMoney.cc: fix not cleared eof flag in strstreams.

	* libmisc: library renamed.

	* libmisc: version 1.8.1.

	* libmisc: library come to 'explore' source tree.

2001-09-20  Petr Ovtchenkov  <ptr@ParallelGraphics.COM>

	* libAux change location; it now in misc catalogs. This done to satisfy
	Windows requirements---Windows fails when see word 'aux'.
	
2001-08-13  Petr Ovtchenkov  <ptr@ParallelGraphics.COM>

	* args.cc (Repository): Change in option style: -option=value now.

2001-08-09  Petr Ovtchenkov  <ptr@ParallelGraphics.COM>

	* libAux: Version 1.7.0
	
	* args.cc, args.h (Repository): Experimental arguments parser.

2001-07-27  Petr Ovtchenkov  <ptr@ParallelGraphics.COM>

	* libAux: Version 1.6.0

	* Makefile.inc (Repository): Remove CyrMoney and cgi modules from
	library.
	
	* Makefile.gcc (Repository): provide workaround for
	bug in GNU make 3.79*---it foget old value of variable when
	tag-dependent variable use += operator, if includes of makefiles
	is too deep---near deepth of 3. This influence to libraries building.
	Add explicit link with other C++ shared libraries---this significantly
	reduce library size.

2001-06-05  Petr Ovtchenkov  <ptr@ParallelGraphics.COM>

	* Makefile.inc (Message): library version 1.5.0
	This reflect real major libAux release.

2001-06-04  Petr Ovtchenkov  <ptr@ParallelGraphics.COM>

	* libAux:  Work with STLport 4.5 beta 8 (from stlport cvs);
	remove obsolete in any case dependence from non-STLport iostreams
	realization (it should not work).

2001-06-01  Petr Ovtchenkov  <ptr@ParallelGraphics.COM>
